snippets/Nemerle.Statechart/Tests/testsuite/negative/join_must_have_at_least_two_sources.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing auto_initial;
  //flags debug;
  
  name "join transition at least two sources error";
  
  state A
  {
    a => B;
  }

  region B
  {
    (C): a => A; // E: Transitions originated from join pseudostate "TransitionFromJoinCToABya" must have at least two source states
    
    state C
    {
    }
    
    state E
    {
    }
    
  } and
  {
    
    state D
    {
    }
    
    state F
    {
    }
  }
  
  #>)]
  public class example
  {
  }

